# ml-trainer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: binary_classification.ipynb  multiclass_classification.ipynb  regression.ipynb
src/ml_trainer/: __init__.py
src/ml_trainer/feature/: base.py  encoders.py  transformers.py
src/ml_trainer/tabular/: trainer.py  types.py  visualization.py
src/ml_trainer/tabular/evaluation/: classification.py  regression.py
src/ml_trainer/tabular/models/: __init__.py  base.py  catboost.py  lightgbm.py  lr.py  xgboost.py
src/ml_trainer/tabular/utils/: model_utils.py  trainer_utils.py  utils.py
tests/tabular/utils/: test_utils.py
